--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   width: 1400px;
-  margin: auto;
+  margin: 0;
   line-height: 19px;
 
 }
@@ -20,7 +20,6 @@ header {
   padding: 20px;
   
 }
-
 
 
 form input[type="text"],
@@ -153,7 +152,13 @@ left: 50%;
 h2  {
   font-size: 30px;
   text-align: center;
-    
+  padding-top: 50px; 
+  padding-bottom: 20px;
+}
+
+.experienciatext  {
+  color: #f6f6f6;
+ 
 }
 
 h3 
@@ -204,3 +209,84 @@ table {
   text-align: center;
 }
 
+
+.proyectos {
+  text-align: center;
+  clear: both;
+
+}
+
+
+div.proyecto {
+  margin: 1%;
+  margin-bottom: 50px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 31%;
+  padding-bottom: 20px;
+  
+}
+
+div.proyecto:hover {
+  border: 1px solid #777;
+}
+
+div.proyecto img {
+  width: 100%;
+  height: auto;
+
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+.experienciasindex {
+background-color:rgb(0, 0, 0);
+clear: both;
+text-align: center;
+padding-bottom: 30px;
+
+
+
+}
+.experienciaindex {
+  display: inline-block;
+}
+
+div.experienciaindex img {
+  width: 60%;
+  height: auto;
+
+}
+
+.textohola {
+width: 60%;
+float: left;
+text-align: left;
+}
+
+.hola {
+  text-align: center;
+  margin-left: 4%;
+  margin-right: 4%;
+}
+
+table th {
+  background-color: #D9D9D9;
+  padding: 10px;
+  width: 342px;
+  text-align:left;
+
+  
+}
+
+table{
+margin: auto;
+}
+
+th img {
+vertical-align: middle;
+
+}
