--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+/* Una recomanació perquè sigui més fàcil maquetar és fer servir un petit reset de css */
+/* 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; <----  https://developer.mozilla.org/en-US/docs/Web/CSS/box-sizing
+} */
 
 body {
   font-size: 16px;
